--- a/themes/flat/css/print.css
+++ b/themes/flat/css/print.css
@@ -25,7 +25,7 @@ tfoot {
     border-top: 2px solid #f8a31f;
 }
 
-.remover,.daterangepicker, .tabs,.actions, .filters, .sort-link,
+.remover,.daterangepicker, .tabs,.actions, .filters, #fccu-grid_c6, ::after, 
 .collapsed {
     visibility: hidden;
     position: fixed;
