--- a/themes/flat/css/style.css
+++ b/themes/flat/css/style.css
@@ -8915,3 +8915,47 @@ a:focus {
 .ui-state-highlighttw {
   background: #deffde !important
 }
+/* EStilos baged  */
+.badge-primary {
+    color: #fff;
+    background-color: #007bff;
+}
+.badge-secondary {
+  color: #fff;
+  background-color: #6c757d;
+}
+.badge-success {
+  color: #fff;
+  background-color: #28a745;
+}
+.badge-danger {
+  color: #fff;
+  background-color: #dc3545;
+}
+.badge-warning {
+  color: #212529;
+  background-color: #ffc107;
+}
+.badge-info {
+  color: #fff;
+  background-color: #17a2b8;
+}
+.badge-light {
+  color: #212529;
+  background-color: #f8f9fa;
+}
+.badge-dark {
+  color: #fff;
+  background-color: #343a40;
+}
+.badge-purple {
+  color: #6931BF;
+  background-color: #BCABD6;
+}
+.badge-alert {
+  color: #F38E00;
+  background-color: rgb(255, 214, 156);
+}
+.badge{
+  font-size: 75%;
+}
